<resources>
    <string name="CANCEL">CANCEL</string>
    <string name="Check_in">Check In</string>
    <string name="FROM">from</string>
    <string name="FROM_KEY">from_src</string>
    <string name="GOT_IT">GOT IT</string>
    <string name="Locations">Locations</string>
    <string name="REPORT">REPORT</string>
    <string name="Recent_searches">Recent Searches</string>
    <string name="Routes">Routes</string>
    <string name="SCHEDULE">TIMETABLE</string>
    <string name="STOPS">STOPS</string>
    <string name="STOPS_HEADER">Stops and Stations</string>
    <string name="Share">Share</string>
    <string name="aadhaar_no">Aadhaar Number</string>
    <string name="aadhar_back">Aadhaar Card Back</string>
    <string name="aadhar_front">Aadhaar Card Front</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ac">AC</string>
    <string name="account_details">app.zophop.account</string>
    <string name="activate">activate</string>
    <string name="activateTicket">Activate Ticket</string>
    <string name="activate_screen_bottomsheet_title">Boarding a bus?</string>
    <string name="activation">activation</string>
    <string name="activation_expired_mticket_copy">Your ticket active duration has expired and is no longer valid for use.</string>
    <string name="activation_expired_mticket_title">Ticket Activation Expired</string>
    <string name="activation_expired_pass_copy">Your pass active duration has expired and is no longer valid for use. Please reactivate the pass to use again.</string>
    <string name="activation_expired_pass_title">Pass Activation Expired</string>
    <string name="actual_fare">Actual Fare</string>
    <string name="add">Add</string>
    <string name="add_contact">Add contact</string>
    <string name="add_details">Add details</string>
    <string name="address">Address</string>
    <string name="after">After </string>
    <string name="agency">Agency</string>
    <string name="agency_covered">Agencies covered</string>
    <string name="agency_guwahati">Ticket issued by ASTC</string>
    <string name="agency_indore">Ticket issued by AICTSL</string>
    <string name="agency_info">AGENCY INFO</string>
    <string name="agency_text">Ticket issued by</string>
    <string name="alarm_time">Alarm Time (E.g. Time at which you leave for bus stop)</string>
    <string name="alert_screen_title">Alerts</string>
    <string name="all_routes">all Routes</string>
    <string name="all_transit">ALL</string>
    <string name="amount">Pay Rs.40</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="announcement">Special Offer! Get %1$s Off using Scan and Pay.</string>
    <string name="app_id">676018639140158</string>
    <string name="app_name">Chalo</string>
    <string name="app_name_chalo_small_case">chalo</string>
    <string name="app_name_zophop">Zophop</string>
    <string name="app_not_installed">%1$s is not installed</string>
    <string name="app_rate_it">Rate it</string>
    <string name="app_rate_never">Never</string>
    <string name="app_rate_not_now">Not now</string>
    <string name="app_rate_title">If you like using %1$s, it would be great if you took a moment to rate it in the Play\10        Store. Thank you!</string>
    <string name="app_update_action_button">UPDATE NOW</string>
    <string name="app_update_subtitle">Please update your app to enjoy new features</string>
    <string name="app_update_title">New Update Available!</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_rejected">Application rejected</string>
    <string name="arriving_soon">Arriving Now</string>
    <string name="ask_us">Ask us</string>
    <string name="assamese">অসমীয়া</string>
    <string name="audio_off">Audio off</string>
    <string name="audio_on">Audio on</string>
    <string name="auto">AUTO</string>
    <string name="auto_subscription_body">Would you like to get notifications to know the arrival time of bus at your bus stop?</string>
    <string name="autosubscribe_dialog_title">Set up an alarm for %1$s</string>
    <string name="banking_hint">Search Bank</string>
    <string name="banking_title">Select Bank</string>
    <string name="basic_user_details_fragment_banner_copy">Details should be as per your Aadhar card or any other ID</string>
    <string name="basic_user_details_fragment_subtitle">Enter details that match any of your government photo ID card eg. Aadhar Card</string>
    <string name="basic_user_details_fragment_title">Enter Your Details</string>
    <string name="bengali">বাংলা</string>
    <string name="beta_caps">BETA</string>
    <string name="beta_confirmation">OKAY</string>
    <string name="beta_kochi_footer">Thanks for your support!</string>
    <string name="beta_message_title">Hey, thanks for being one of the first to join the Chalo community in %1$s :-) \10\10We are still testing the app, so:</string>
    <string name="beta_message_title_kochi">Hey, thanks for being one of the first to join the Chalo community in Kochi :-) \10We are still testing the app, so:</string>
    <string name="beta_title">Beta Version</string>
    <string name="better_route_suggestion_string">Know a better route? Timings or fares not accurate? Tell us!</string>
    <string name="blog">Blog</string>
    <string name="board_at">Board at %1$s</string>
    <string name="book_activity_both_title">Book Ticket/Pass</string>
    <string name="book_cab">BOOK CAB</string>
    <string name="booking">booking</string>
    <string name="bookingId">bookingId</string>
    <string name="booking_details_caps">BOOKING DETAILS</string>
    <string name="booking_history_login_banner">Log in to see your booking history</string>
    <string name="booking_history_title">My Bus Passes</string>
    <string name="booking_history_title_pass">My Tickets/Passes</string>
    <string name="booking_succ_activate_tkt_desc">To use your ticket / pass, tap on start a ride.</string>
    <string name="booking_succ_activate_tkt_title">Start a ride</string>
    <string name="booking_succ_conductor_verif_desc">Tap on the conductor\'s machine to verify your ticket / pass.</string>
    <string name="booking_succ_conductor_verif_title">Verify with conductor</string>
    <string name="booking_successful">Booking Successful</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="btn_cancel_alarm">NO, THANKS</string>
    <string name="btn_route_details">Route Details</string>
    <string name="btn_set_alarm">YES, SET UP AN ALARM</string>
    <string name="confirm">CONFIRM</string>
    <string name="continue_copy">CONTINUE</string>
    <string name="didnt_receive_otp">Didn\'t receive our SMS?</string>
    <string name="dismiss_caps">DISMISS</string>
    <string name="eight">8</string>
    <string name="email_id">Email Id</string>
    <string name="enter_6_digit_verification_code">Please enter the 6-digit SMS verification code we have sent you</string>
    <string name="first_name">First Name</string>
    <string name="five">5</string>
    <string name="font_medium">fonts/NotoSans-SemiBold.ttf</string>
    <string name="four">4</string>
    <string name="gen_instructions_last">By purchasing a pass, you agree to Chalo\'s terms and conditions  \10    </string>
    <string name="gen_instructions_title">General instructions</string>
    <string name="journey_details">Journey details</string>
    <string name="journey_details_info">Enter all trip details such as start-end bus stop, number of days, etc.</string>
    <string name="last_name">Last Name</string>
    <string name="make_payment">Make a payment</string>
    <string name="make_payment_info">Pay for your journey using debit/credit card, net banking, or mobile wallet\10        through a secure payment gateway.</string>
    <string name="mticketing_info_how_it_works">How does it work?</string>
    <string name="nine">9</string>
    <string name="nps_high_rating_text">10 - Very Likely</string>
    <string name="nps_low_rating_text">0 - Not Likely</string>
    <string name="nps_survey_rating_dialog_title">How likely are you to recommend Chalo to a friend?</string>
    <string name="okay_got_it">OKAY, GOT IT</string>
    <string name="one">1</string>
    <string name="one_time_register">Registration (One time)</string>
    <string name="one_time_register_info">To register, add your photo to your profile using your phone\'s camera.</string>
    <string name="otp">Enter OTP</string>
    <string name="pass_punch">Get your pass punched</string>
    <string name="pass_punch_info">Your mobile pass is generated and saved under \"My Passes\" for future use. Show\10        it to the conductor and get it punched each time you take a trip.</string>
    <string name="phone_number">Phone Number</string>
    <string name="profile_hint_dob">Date of Birth</string>
    <string name="profile_hint_gender">Gender</string>
    <string name="resend_sms">Resend SMS</string>
    <string name="saved_destination_dialog_cancel_button">CANCEL</string>
    <string name="saved_destination_dialog_edit_text_hint">eg: home or work</string>
    <string name="saved_destination_dialog_home">Home</string>
    <string name="saved_destination_dialog_other">Other</string>
    <string name="saved_destination_dialog_save_button">SAVE</string>
    <string name="saved_destination_dialog_title">Add Favorite</string>
    <string name="saved_destination_dialog_work">Work</string>
    <string name="search_stop_menu_title">Search Stops</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="subscribe">Set Alarm</string>
    <string name="ten">10</string>
    <string name="three">3</string>
    <string name="trip_details_menu">Map View</string>
    <string name="trip_screen_menu_fav">Add Favorite</string>
    <string name="two">2</string>
    <string name="verify">VERIFY</string>
    <string name="view_schedule_route">View Timetable</string>
    <string name="zero">0</string>
</resources>