<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:auto="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/search_white" android:id="@+id/menu_search_stop" android:visible="false" android:title="@string/trip_details_menu" auto:showAsAction="always"/>
    <item android:icon="@drawable/favorites_save" android:id="@+id/favorite" android:title="@string/trip_screen_menu_fav" auto:showAsAction="always"/>
    <item android:icon="@drawable/favorites_save" android:id="@+id/share" android:title="@string/Share" auto:showAsAction="never"/>
    <item android:icon="@drawable/favorites_save" android:id="@+id/check_in" android:title="@string/Check_in" auto:showAsAction="never"/>
    <item android:icon="@drawable/favorites_save" android:id="@+id/subscribe_menu" android:title="@string/subscribe" auto:showAsAction="never"/>
</menu>
