<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/white" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content">
    <app.zophop.ui.views.ZophopFormInput android:id="@+id/form_first_name" android:layout_width="match_parent" android:layout_height="wrap_content" app:editable="true" app:hint="@string/first_name"/>
    <app.zophop.ui.views.ZophopFormInput android:id="@+id/form_last_name" android:layout_width="match_parent" android:layout_height="wrap_content" app:editable="true" app:hint="@string/last_name"/>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <app.zophop.ui.views.ZophopFormInput android:id="@+id/form_gender" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" app:hint="@string/profile_hint_gender"/>
        <app.zophop.ui.views.ZophopFormInput android:id="@+id/form_dob" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" app:hint="@string/profile_hint_dob"/>
    </LinearLayout>
    <app.zophop.ui.views.ZophopFormInput android:id="@+id/form_email_id" android:layout_width="match_parent" android:layout_height="wrap_content" app:editable="true" app:hint="@string/email_id"/>
    <app.zophop.ui.views.ZophopFormInput android:id="@+id/form_phone_number" android:layout_width="match_parent" android:layout_height="wrap_content" app:editable="true" app:hint="@string/phone_number"/>
    <include android:id="@+id/pass_profile_info" android:visibility="visible" layout="@layout/pass_profile_layout"/>
    <TextView android:enabled="false" android:textSize="15dp" android:textColor="@color/white" android:gravity="center" android:id="@+id/action_button" android:background="@drawable/orange_rounded_button" android:layout_width="match_parent" android:layout_height="56dp" android:layout_marginLeft="12dp" android:layout_marginTop="12dp" android:layout_marginRight="12dp" android:layout_marginBottom="12dp" android:text="@string/confirm" android:alpha="0.4" fontPath="fonts/NotoSans-SemiBold.ttf"/>
</LinearLayout>
