<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar android:id="@+id/mticketing_info_action_tool_bar" android:layout_width="match_parent" android:layout_height="@dimen/action_bar_height" style="@style/ZophopToolbarStyle.WhiteToolBar"/>
    <ScrollView android:background="@color/new_activity_color" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:background="@color/new_activity_color" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="16dp" android:textColor="@color/black_60" android:paddingLeft="32dp" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/mticketing_info_how_it_works" style="@style/mediumFont.NormalText"/>
            <androidx.cardview.widget.CardView android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="8dp">
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <app.zophop.ui.views.MTicketingInfoLayout android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" app:circle_size_ticketinfo="16dp" app:positionmode_ticketinfo="0" app:rectcolor_ticketinfo="@color/black" app:subtitle_ticketinfo="@string/journey_details_info" app:title_ticketinfo="@string/journey_details"/>
                    <app.zophop.ui.views.MTicketingInfoLayout android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" app:circle_size_ticketinfo="16dp" app:rectcolor_ticketinfo="@color/black" app:subtitle_ticketinfo="@string/one_time_register_info" app:title_ticketinfo="@string/one_time_register"/>
                    <app.zophop.ui.views.MTicketingInfoLayout android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" app:circle_size_ticketinfo="16dp" app:rectcolor_ticketinfo="@color/black" app:subtitle_ticketinfo="@string/make_payment_info" app:title_ticketinfo="@string/make_payment"/>
                    <app.zophop.ui.views.MTicketingInfoLayout android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" app:circle_size_ticketinfo="16dp" app:positionmode_ticketinfo="2" app:rectcolor_ticketinfo="@color/black" app:subtitle_ticketinfo="@string/pass_punch_info" app:title_ticketinfo="@string/pass_punch"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView android:textSize="16dp" android:textColor="@color/black_60" android:paddingLeft="32dp" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/gen_instructions_title" style="@style/mediumFont.NormalText"/>
            <androidx.cardview.widget.CardView android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="8dp">
                <LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <app.zophop.ui.views.OrderedTextList android:entries="@array/gen_instructions_arr" android:paddingLeft="12dp" android:paddingTop="16dp" android:paddingRight="16dp" android:layout_width="match_parent" android:layout_height="wrap_content"/>
                    <LinearLayout android:orientation="horizontal" android:paddingLeft="16dp" android:paddingTop="4dp" android:paddingBottom="16dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                        <TextView android:textColor="@color/black_60" android:id="@+id/order_number_last" android:paddingRight="4dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="5" style="@style/regularFont"/>
                        <TextView android:textColor="@color/black_60" android:id="@+id/order_text_last" android:paddingLeft="4dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gen_instructions_last" android:singleLine="false" style="@style/regularFont"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView android:textSize="15dp" android:textColor="@color/white" android:gravity="center" android:id="@+id/mticket_info_got_it" android:background="@drawable/orange_rounded_button" android:layout_width="match_parent" android:layout_height="56dp" android:layout_marginLeft="12dp" android:layout_marginTop="12dp" android:layout_marginRight="12dp" android:layout_marginBottom="12dp" android:text="@string/okay_got_it" fontPath="fonts/NotoSans-SemiBold.ttf"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
