<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:animateLayoutChanges="true">
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@+id/nps_survey_dialog_layout" android:paddingTop="24dp" android:paddingBottom="24dp" android:layout_width="@dimen/feedback_dialog_width" android:layout_height="wrap_content">
        <ScrollView android:layout_width="match_parent" android:layout_height="0dp" android:fillViewport="false" android:layout_weight="1">
            <LinearLayout android:orientation="vertical" android:id="@+id/rating_container" android:paddingLeft="16dp" android:paddingRight="16dp" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18sp" android:textColor="@color/black_87" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/nps_dialog_type1_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:text="@string/nps_survey_rating_dialog_title" style="@style/mediumFont"/>
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="26dp">
                    <TextView android:textSize="16sp" android:textColor="@color/black_87" android:gravity="center" android:id="@+id/rating_zero" android:background="@drawable/rectangular_button_grey" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/zero" style="@style/mediumFont"/>
                    <View android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"/>
                    <TextView android:textSize="16sp" android:textColor="@color/black_87" android:gravity="center" android:id="@+id/rating_one" android:background="@drawable/rectangular_button_grey" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/one" style="@style/mediumFont"/>
                    <View android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"/>
                    <TextView android:textSize="16sp" android:textColor="@color/black_87" android:gravity="center" android:id="@+id/rating_two" android:background="@drawable/rectangular_button_grey" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/two" style="@style/mediumFont"/>
                    <View android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"/>
                    <TextView android:textSize="16sp" android:textColor="@color/black_87" android:gravity="center" android:id="@+id/rating_three" android:background="@drawable/rectangular_button_grey" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/three" style="@style/mediumFont"/>
                    <View android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"/>
                    <TextView android:textSize="16sp" android:textColor="@color/black_87" android:gravity="center" android:id="@+id/rating_four" android:background="@drawable/rectangular_button_grey" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/four" style="@style/mediumFont"/>
                    <View android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"/>
                    <TextView android:textSize="16sp" android:textColor="@color/black_87" android:gravity="center" android:id="@+id/rating_five" android:background="@drawable/rectangular_button_grey" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/five" style="@style/mediumFont"/>
                    <View android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"/>
                    <TextView android:textSize="16sp" android:textColor="@color/black_87" android:gravity="center" android:id="@+id/rating_six" android:background="@drawable/rectangular_button_grey" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/six" style="@style/mediumFont"/>
                    <View android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"/>
                    <TextView android:textSize="16sp" android:textColor="@color/black_87" android:gravity="center" android:id="@+id/rating_seven" android:background="@drawable/rectangular_button_grey" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/seven" style="@style/mediumFont"/>
                    <View android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"/>
                    <TextView android:textSize="16sp" android:textColor="@color/black_87" android:gravity="center" android:id="@+id/rating_eight" android:background="@drawable/rectangular_button_grey" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/eight" style="@style/mediumFont"/>
                    <View android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"/>
                    <TextView android:textSize="16sp" android:textColor="@color/black_87" android:gravity="center" android:id="@+id/rating_nine" android:background="@drawable/rectangular_button_grey" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nine" style="@style/mediumFont"/>
                    <View android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"/>
                    <TextView android:textSize="16sp" android:textColor="@color/black_87" android:gravity="center" android:id="@+id/rating_ten" android:background="@drawable/rectangular_button_grey" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ten" style="@style/mediumFont"/>
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp">
                    <TextView android:textSize="14sp" android:textColor="@color/black_70" android:id="@+id/nps_low_rating_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nps_low_rating_text" style="@style/regularFont"/>
                    <View android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"/>
                    <TextView android:textSize="14sp" android:textColor="@color/black_70" android:id="@+id/nps_high_rating_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nps_high_rating_text" style="@style/regularFont"/>
                </LinearLayout>
                <RelativeLayout android:id="@+id/btn_dialog_action_container" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_marginRight="-8dp">
                    <TextView android:textSize="14sp" android:textColor="@color/black_70" android:id="@+id/btn_negative_action" android:background="@drawable/drawer_item_selector" android:padding="8dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="16dp" android:text="@string/dismiss_caps" android:layout_toLeftOf="@+id/btn_positive_action" style="@style/mediumFont"/>
                    <TextView android:textSize="14sp" android:textColor="@color/chalo_primary" android:gravity="end" android:id="@+id/btn_positive_action" android:background="@drawable/drawer_item_selector" android:padding="8dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/continue_copy" android:layout_alignParentEnd="true" style="@style/mediumFont"/>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
