<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="24dp">
    <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/black_30" android:id="@+id/otp_layout" android:focusable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" app:hintTextAppearance="@style/PhoneNumberVerificationHint">
        <com.google.android.material.textfield.TextInputEditText android:theme="@style/edit_text_theme" android:textSize="18dp" android:textColor="@color/black_87" android:id="@+id/otp_verification" android:focusable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/otp" android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView android:textSize="14dp" android:textColor="@color/black_60" android:gravity="center" android:id="@+id/please_enter_verification_code" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="8dp" android:layout_marginRight="20dp" android:text="@string/enter_6_digit_verification_code"/>
    <Button android:textSize="14dp" android:textColor="@color/white" android:id="@+id/verify_login" android:background="@drawable/green_rounded_button_otp" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginLeft="20dp" android:layout_marginTop="32dp" android:layout_marginRight="20dp" android:layout_marginBottom="20dp" android:text="@string/verify" fontPath="@string/font_medium"/>
    <TextView android:textSize="14dp" android:textColor="@color/black_60" android:gravity="center" android:id="@+id/tv_dont_reveive_sms" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:text="@string/didnt_receive_otp"/>
    <TextView android:textSize="14dp" android:textColor="@color/view_schedule_color" android:gravity="center" android:id="@+id/resend_sms" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="4dp" android:layout_marginRight="20dp" android:text="@string/resend_sms"/>
</LinearLayout>
